learned class and id

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <table cellspacing = "20px">
     <tr>
       <td><img src="https://yup.com/static/c49030e428febc47972712aec1011b4a/depositphotos_136562916_xl-2015.jpg" alt="my profile picture" width="200px"></td>
-      <td><h2>Algebra 2 boy</h2>
+      <td><h2 id = "heading">Algebra 2 boy</h2>
       <p>A <em>CS</em> student at <strong><a href="https://www.umass.edu">UMass Amherst</a></strong></p>
       <p>I am learning how to make a website. I love salmon.</p> </td>
     </tr>
@@ -59,6 +59,11 @@
         <td>Learning CSS and how to link CSS to HTML file </td>
       </tr>
 
+      <tr>
+        <td>10/20/2022</td>
+        <td>Learning CSS selectors, and the difference between class (.) and id (#)</td>
+      </tr>
+
 
     </tbody>
 
@@ -77,8 +82,10 @@
       </tr>
     </table>
 
-    <a href="contact.html">contact Me</a>
+  <a href="contact.html">contact Me</a> <hr>
 
+  <img class = "pumpkin" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/jack-o-lantern_1f383.png" alt="pumpkin" width="50" height = "50">
+  <img class = "candy circular" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/emojidex/112/candy_1f36c.png" alt="candy" width="50" height = "50">
 
 </body>
 
