--- a/React/my-app/public/index.html
+++ b/React/my-app/public/index.html
@@ -11,6 +11,11 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <!-- Enable us to use the google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Use the font awesome icons -->
     <link
